--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.2",
     "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.6.1",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^8.1.3"
+    "react-hook-form": "^7.48.2",
+    "react-redux": "^8.1.3",
+    "yup": "^1.3.2"
   },
   "devDependencies": {
     "@types/node": "^20",
